Fix tabs causing horizonal overflow in Safari and Firefox

--- a/src/render/app/style.scss
+++ b/src/render/app/style.scss
@@ -25,6 +25,7 @@
             display: flex;
             max-height: 100%;
             min-height: 0;
+            max-width: var(--fl-asst-panel-size);
         }
     }
 
